--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
   <h1>Project Rock Paper Scissors</h1>
+  <div id="button-container">
+    <button value="ROCK">Rock</button>
+    <button value="PAPER">Paper</button>
+    <button value="SCISSORS">Scissors</button>
+  </div>
+  
   <script src="./script.js"></script>
 </body>
 </html>
