--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
   <h1>Project Rock Paper Scissors</h1>
   <div id="button-container">
+    <p>
+      computer: <strong id="score-computer"></strong> player: <strong id="score-player"></strong>
+    </p>
     <button value="ROCK">Rock</button>
     <button value="PAPER">Paper</button>
     <button value="SCISSORS">Scissors</button>
