--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h1>Project Rock Paper Scissors</h1>
   <div id="button-container">
     <p>
-      computer: <strong id="score-computer"></strong> player: <strong id="score-player"></strong>
+      Player: <strong id="score-player"></strong> Computer: <strong id="score-computer"></strong> 
     </p>
     <button value="ROCK">Rock</button>
     <button value="PAPER">Paper</button>
